dark/light theme implemented

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -5,6 +5,11 @@
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Contact Manager</span>
         </a>
         <div class="flex gap-2 md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+            <button id="theme_toggle" class="bg-gray-400 flex items-center space-x-2 rounded dark:bg-gray-600">
+
+                <img data-th-src="@{'/images/brightness.png'}" class="h-4  my-1 ml-3" alt="PhoneBook Logo" />
+                <span id="current_theme" class="self-center  my-1 pr-3 dark:text-white">Light</span>
+            </button>
             <a type="button" data-th-href="@{/login}" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</a>
             <a type="button" data-th-href="@{/register}" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign Up</a>
 
