--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" th:fragment="parent(content,title)" xmlns:th="http://www.w3.org/1999/xhtml">
+<html class="light" lang="en" th:fragment="parent(content,title)" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport"
@@ -8,16 +8,16 @@
     <link rel="stylesheet" data-th-href="@{/css/output.css}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-
-    <title th:replace="${title}"></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title th:replace="${title}"></title>
 </head>
-<body>
+<body class="dark:bg-gray-900 dark:text-white">
 <!-- common header -->
 <div th:replace="~{navbar :: navbar}"></div>
 
-<div th:replace="${content}"></div>
+<div th:replace="${content}" ></div>
 
 <!-- common footer -->
+<script data-th-src="@{/js/script.js}"></script>
 
 </body>
 </html>
